Add myself to AUTHORS.
git-svn-id: http://svn.irssi.org/repos/irssi/trunk@5171 dbcabf3a-b0e7-0310-adc4-f8d773084564

--- a/AUTHORS
+++ b/AUTHORS
@@ -10,6 +10,7 @@ Irssi staff (current maintainers) <staff@irssi.org>:
   Geert Hauwaerts (Geert)
   Jilles Tjoelker (jilles)
   Alexander Færøy (ahf)
+  Jase Thew (bazerka)
 
 Former developers:
 
